--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -4,8 +4,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-<<<<<<< HEAD
+      - run: sudo apt install make
       - run: make say-hello
-=======
-      - run: make say-hello
->>>>>>> ef690dd (add hello-world workflow)
