--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/main
+      - uses: d1z3d/hexlet-my-first-workflow/main
       - run: sudo apt update
       - run: sudo apt install make
       - run: make say-hello
